# msiregnn

./: .bumpversion.cfg  .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
examples/: visualization_demo.py
src/msiregnn/: AttentionModel.py  FeatureExtractor.py  FeatureExtractorWithAttention.py  __init__.py  affine-testing.py  bspline-testing.py  interpolation.py  model.py  pretrain.py  selectROI.py  testing.py  train.py  training.py  utils.py  version.py
src/msiregnn/metrics/: __init__.py  mi.py  rmse.py
src/msiregnn/reg/: AffineRegistration.py  BsplineRegistration.py  BsplineRegistrationWithFeatureExtractor.py  BsplineRegistrationWithLocNetResizing.py  LocNet.py  TransformationExtractor.py  __init__.py  model_train.py
src/msiregnn/stn/: __init__.py
src/msiregnn/stn/affine/: __init__.py  st_affine.py
src/msiregnn/stn/bspline/: __init__.py  st_bspline.py
src/msiregnn/visualization/: __init__.py  composite.py  core.py  diagnostics.py  images.py  masks.py  transforms.py
tests/: conftest.py
